# fidelity-portfolio-tracker

./: .gitignore  Dev.ipynb  README.md  UAT.ipynb  Uat.ipynb  main.py  portfolio.yml  pyproject.toml  requirements.txt  test.ipynb
code/: Dev.ipynb  Uat.ipynb  main.py  test.ipynb
code/support_functions/: __init__.py  data_loader.py  load_position.py  load_transaction.py  portfolio.py
data/: Accounts_History_2022Q3.csv  Accounts_History_2022Q4.csv  Accounts_History_2023Q1.csv  Accounts_History_2023Q2.csv  Accounts_History_2023Q3.csv  Accounts_History_2023Q4.csv  Accounts_History_2024Q1.csv  Accounts_History_2024Q2.csv  Accounts_History_2024Q3.csv  Accounts_History_2024Q4.csv  Accounts_History_2025Q1.csv  Accounts_History_recent.csv  Portfolio_Positions_Jan-07-2025.csv  Portfolio_Positions_Mar-04-2025.csv  Portfolio_Positions_Nov-12-2024.csv  Portfolio_Positions_Nov-13-2024.csv  Portfolio_Positions_Nov-19-2024.csv  Portfolio_Positions_Nov-23-2024.csv
scripts/: DEV.ipynb  UAT.ipynb
src/: main.py
src/support_functions/: analysis.py  data_loader.py  flow_builders.py  llm.py  math_utils.py  portfolio_analyzer.py  report.py  report_generator.py
support_functions/: analysis.py  compute_irr.py  data_loader.py  display_percentage.py  portfolio.py
support_functions_Uat/: data_loader.py  portfolio.py
